🍀 Fixed the abnormal scaling on mobile devices

--- a/themes/mikoto/sass/_base.scss
+++ b/themes/mikoto/sass/_base.scss
@@ -1,9 +1,14 @@
 html {
     font-size: 16px;
     box-sizing: border-box;
+    height: 100%;
 }
 
 body {
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
+
     line-height: 1.5;
     color: #34495e;
     background: #fefefe;
@@ -15,12 +20,13 @@ body {
 }
 
 .container {
+    flex: 1;
     width: $body-width;
     margin: 0 auto;
     padding-bottom: 4rem;
 }
 
-@include max-screen() {
+@include mobile-screen() {
     body {
         border-top: 0;
     }
