--- a/themes/mikoto/sass/_mobile.scss
+++ b/themes/mikoto/sass/_mobile.scss
@@ -45,14 +45,15 @@
 }
 
 .mobile-menu {
-    background-color: rgba($secondary-colour, 0.5);
+    background-color: white;
+    border: 1px solid $secondary-colour;
 
     .mobile-menu-list {
         position: relative;
         list-style: none;
-        margin-top: 50px;
+        margin-top: 0;
         padding: 0;
-        border-top: 1px solid $secondary-colour;
+
 
         .mobile-menu-item {
             padding: 10px 30px;
@@ -69,8 +70,17 @@
     }
 }
 
-@include max-screen() {
+@include mobile-screen() {
     .mobile-navbar {
         display: block;
+    }
+    .github-corner {
+        display: none;
+    }
+    #waifu {
+        display: none;
+    }
+    #waifu-toggle {
+        display: none;
     }
 }
